This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

14-Apr-2009 (Gnomi)
  - (doc/driver/predefined) Corrected description of __PATH__(n).
  - (mk-patchlevel.h) Call version.sh in the current directory.

12-Apr-2009 (Gnomi)
  - (efuns.c, pkg-openssl.c, pkg-gcrypt.c) Moved hash() and hmac()
    from pkg-openssl.c to efuns.c and implemented them also using
    libgcrypt or the internal MD5 and SHA1 routines (bug #52).
  - (efuns.c) fixed a memory leak in hash() and hmac().
  - (efuns.c) hash() now costs 10 ticks per iteration.
  - (efuns.c) sha1() calculated wrong hash values with multiple
    interations.
  - (doc/efun) Marked md5() and sha1() as obsoleted by hash().
  - (pkg-openssl.c) Don't set a just queried client CA again. (Bug #583)

10-Apr-2009 (Gnomi)
  - (pkg-gnutls.c) Implemented tls_refresh_certs and tls_check_certificate
    with GnuTLS.

09-Apr-2009 (Gnomi)
  - (interpret.c) Wrongly calculated the jump offset of the default
    label in big switches due to a sign error (maybe #622).
  - (exec.h) Another value for NAME_CROSS_DEFINED so that it doesn't
    conflict with FUNSTART_MASK (large programs could hit that bit).

08-Apr-2009 (Gnomi)
  - (pkg-tls.c) Set command_giver when executing the callback
    after handshaking (Bug #499).

07-Apr-2009 (Gnomi)
  - (pkg-tls.h) Corrected the definition of tls_check_certificate.
  - (pkg-gnutls.h, pkg-openssl.h) Forgot an include.
  - (main.c) Removed a superfluous pointer dereference.

21-Mar 2009 (Gnomi)
  - (pkg-tls.c, pkg-openssl.c, pkg-gnutls.c) Separated code for GnuTLS
    and OpenSSL.

15-Mar-2009 (Fuchur)
  - (test/inc/deep_eq.inc)
    Implement deep equality for the testsuite.
  - (test/t-efuns.c)
    Add a few tests for map().
  - (array.c, strfuns.c, structs.c, efuns.c, doc/efun[.de]/map[.de])
    Implement map(*, mapping, idx). (#367)

12-Mar 2009 (Zesstra)
  - (slaballoc.c, smalloc.c)